--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -1,9 +1,8 @@
-@import '../../styles/utils';
+@import "../../styles/utils";
 
 .Home {
   height: 100vh;
   width: 100vw;
-  overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
