--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -11,4 +11,14 @@
   h1 {
     font-size: 50px;
   }
+
+  @media (max-width: 800px) {
+    h1 {
+      margin-top: 100px;
+    }
+
+    img {
+      display: none;
+    }
+  }
 }
