--- a/src/components/JobCard/styles.scss
+++ b/src/components/JobCard/styles.scss
@@ -5,4 +5,14 @@
   background-color: white;
   border-radius: 7px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+
+  @media (max-width: 1200px) {
+    margin: 5px;
+  }
+
+  @media (max-width: 800px) {
+    width: 100%;
+    border-radius: 0;
+    box-shadow: none;
+  }
 }
