--- a/src/components/MainCard/styles.scss
+++ b/src/components/MainCard/styles.scss
@@ -18,4 +18,13 @@
       background-color: rgba(108, 99, 255, 0.8);
     }
   }
+
+  @media (max-width: 1200px) {
+    margin: 5px;
+  }
+
+  @media (max-width: 800px) {
+    width: 100%;
+    box-shadow: none;
+  }
 }
